# KasperskyOS_Hackaton2022

./: .gitignore  LICENSE.md  README.md
MainPart/: Convert_coordinations.cpp  mosquitto.conf
MainPart/monolith_client/subscriber/src/: gpio.cpp  gpiomodule.cpp  main.cpp  subscriber.cpp
MainPart/mqtt_gpio/: mount-image.sh  publish_message.sh  start_broker.sh
MainPart/mqtt_gpio/einit/src/: security.psl
MainPart/mqtt_gpio/subscriber/: CMakeLists.txt
MainPart/mqtt_gpio/subscriber/src/: common.h  general.h  gpio.cpp  gpio.h  main.cpp  subscriber.cpp  subscriber.h
Qualification/: README.md
Qualification/Task1/: Dockerfile  build_docker.sh  mosquitto.conf  start_docker.sh
Qualification/Task2/: hello.c  results.txt
Qualification/Task3/: mosquitto.conf  output.txt
Qualification/Task3/mqtt_subscriber/: prerequsites.sh  prerequsites.sh~  publish_message.sh  start_broker.sh  start_subscriber.sh
Qualification/Task4/mqtt_echo/: CMakeLists.txt
Qualification/Task4/mqtt_echo/client/: CMakeLists.txt
Qualification/Task4/mqtt_echo/client/src/: IPCExchanger.cpp  IPCExchanger.h  subscriber.cpp  subscriber.h
Qualification/Task4/mqtt_echo/einit/: CMakeLists.txt
Qualification/Task4/mqtt_echo/einit/src/: init.yaml.in  security.psl
entities/mqtt_subscriber/: CMakeLists.txt
